# WindowsFileMappingAbstraction

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt
client/: CMakeLists.txt  main.cpp  pch.h
lib/: CMakeLists.txt  SharedMemory.cpp  SharedMemory.hpp  pch.h
scripts/: unix_generate  win_clean.bat  win_generate.bat
server/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  main.cpp  pch.h
